--- a/src/App.css
+++ b/src/App.css
@@ -903,6 +903,7 @@ padding-bottom: 100px;
   padding-right: 5px;
   margin-right: 0.5rem;
   transition: transform 0.3s ease;
+  position: center;
 }
 
 .footer-section .social-links img:hover {
